<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calcy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_hint">Welcome to Calculator 2.0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="num0">0</string>
    <string name="b_dec">.</string>
    <string name="equals">=</string>
    <string name="adds">+</string>
    <string name="subtracts">-</string>
    <string name="multiplies">*</string>
    <string name="divides">/</string>

</resources>
