<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.znuked.calcy2.MainActivity">

    <EditText
        android:id="@+id/output"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:editable="false"
        android:ellipsize="start"
        android:gravity="end"
        android:hint="@string/text_hint"
        android:paddingTop="15dp"
        android:textAlignment="textEnd"
        android:textSize="20sp" />

    <Button
        android:id="@+id/b1"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/output"
        android:layout_marginTop="55dp"
        android:text="@string/num1"
        android:textSize="50sp" />
    <!--android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"-->
    <Button
        android:id="@+id/b2"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/b1"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/b1"
        android:text="@string/num2"
        android:textSize="50sp" />

    <Button
        android:id="@+id/b3"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/b2"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/b2"
        android:text="@string/num3"
        android:textSize="50sp" />

    <Button
        android:id="@+id/adds"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/b3"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/b3"
        android:text="@string/adds"
        android:textSize="50sp" />

    <Button
        android:id="@+id/b4"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b1"
        android:layout_marginTop="10dp"
        android:text="@string/num4"
        android:textSize="50sp" />

    <Button
        android:id="@+id/b5"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/b4"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/b4"
        android:text="@string/num5"
        android:textSize="50sp" />

    <Button
        android:id="@+id/b6"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/b5"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/b5"
        android:text="@string/num6"
        android:textSize="50sp" />

    <Button
        android:id="@+id/subtracts"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/b6"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/b6"
        android:text="@string/subtracts"
        android:textSize="50sp" />

    <Button
        android:id="@+id/b7"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b4"
        android:layout_marginTop="10dp"
        android:text="@string/num7"
        android:textSize="50sp" />

    <Button
        android:id="@+id/b8"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/b7"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/b7"
        android:text="@string/num8"
        android:textSize="50sp" />

    <Button
        android:id="@+id/b9"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/b8"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/b8"
        android:text="@string/num9"
        android:textSize="50sp" />

    <Button
        android:id="@+id/multiplies"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/b9"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/b9"
        android:text="@string/multiplies"
        android:textSize="50sp" />

    <Button
        android:id="@+id/b0"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b7"
        android:layout_marginTop="10dp"
        android:text="@string/num0"
        android:textSize="50sp" />

    <Button
        android:id="@+id/b_dec"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/b0"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/b0"
        android:text="@string/b_dec"
        android:textSize="50sp" />

    <Button
        android:id="@+id/equals"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/b_dec"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/b_dec"
        android:text="@string/equals"
        android:textSize="50sp" />

    <Button
        android:id="@+id/divides"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/equals"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/equals"
        android:text="@string/divides"
        android:textSize="50sp" />
</RelativeLayout>
